# aisw

./: .gitignore  AUTH_STORAGE_MATRIX.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  build.rs  install.sh  package-lock.json
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: coverage-gate.sh
.github/workflows/: ci.yml  credential-store-canary.yml  docs-pages.yml  homebrew-release.yml  notify-aiswitcher-dev.yml  release.yml
completions/: _aisw  aisw.bash  aisw.fish
docs/: acceptance-matrix.md  adding-profiles.md  automation.md  commands.md  common-situations.md  config.md  docs-site-architecture.md  how-it-works.md  index.md  quickstart.md  releases.md  security.md  shell-integration.md  supported-tools.md  troubleshooting.md  why-aisw.md  workspace.md
man/: aisw.1
src/: activation.rs  backup.rs  cli.rs  config.rs  error.rs  lib.rs  live_apply.rs  machine.rs  main.rs  next_steps.rs  output.rs  profile.rs  runtime.rs  terminal.rs  tool_detection.rs  types.rs  workspace.rs
src/auth/: antigravity.rs  claude.rs  codex.rs  files.rs  gemini.rs  identity.rs  macos_keychain.rs  mod.rs  secure_backend.rs  secure_store.rs  system_keyring.rs  test_overrides.rs  token_expiry.rs
src/auth/claude/: api_key.rs  keychain.rs  mod.rs  oauth.rs  paths.rs
src/commands/: add.rs  backup.rs  capabilities.rs  context.rs  doctor.rs  init.rs  list.rs  mod.rs  project_bindings.rs  remove.rs  rename.rs  repair.rs  save.rs  shell_hook.rs  status.rs  uninstall.rs  use_.rs  verify.rs  version.rs  workspace.rs
src/util/: edit_distance.rs  jwt.rs  mod.rs
tests/: acceptance_matrix_consistency.rs  add_claude.rs  add_cmd.rs  add_codex.rs  add_gemini.rs  add_gemini_failure_modes.rs  backup_cmd.rs  cli_basic.rs  command_contract_matrix.rs  command_edge_mode_matrix.rs  completions_smoke.sh  context_cmd.rs  gui_contract.rs  init_cmd.rs  install_script.rs  interactive_pickers_pty.rs  json_output_contract.rs  lifecycle.rs  list_cmd.rs  real_credential_store_canary.rs  remove_cmd.rs  rename_cmd.rs  secure_backend_cmd.rs  shell_hook_cmd.rs  status_cmd.rs  uninstall_cmd.rs  use_cmd.rs  windows_integration_smoke.rs  windows_secure_backend_parity.rs  workspace_cmd.rs
tests/common/: mod.rs
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/public/: llms-full.txt  llms.txt  robots.txt  site.webmanifest
website/public/demos/: aisw-context-workflow.cast  aisw-important-workflows.cast  aisw-workspace-workflow.cast
website/scripts/: check-seo.mjs  generate-context-demo-cast.mjs  generate-demo-cast.mjs  generate-workspace-demo-cast.mjs  sync-docs.mjs
website/src/content/docs/: 404.md  adding-profiles.md  automation.md  commands.md  common-situations.md  configuration.md  how-it-works.md  index.md  quickstart.md  security.md  shell-integration.md  supported-tools.md  troubleshooting.md  why-aisw.md  workspace.md
website/src/styles/: custom.css
