[package]
name = "aisw"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
description = "Manage multiple accounts for Claude Code, Codex CLI, and Gemini CLI"
license = "MIT"
repository = "https://github.com/burakdede/aisw"
homepage = "https://burakdede.github.io/aisw/"
documentation = "https://burakdede.github.io/aisw/"
readme = "README.md"
keywords = ["cli", "claude", "codex", "gemini", "account-switcher"]
categories = ["command-line-utilities"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/src/**",
]

[[bin]]
name = "aisw"
path = "src/main.rs"

[lib]
name = "aisw"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
dialoguer = "0.11"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
anyhow = "1"
fs2 = "0.4"
base64 = "0.22"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
